--- a/files_for_lab/csv_files/round_2_customer_analysis_raphael_zimeray.ipynb
+++ b/files_for_lab/csv_files/round_2_customer_analysis_raphael_zimeray.ipynb
@@ -58,7 +58,7 @@
   {
    "cell_type": "code",
    "execution_count": 153,
-   "id": "78e0fd6e",
+   "id": "2a5cbdee",
    "metadata": {},
    "outputs": [
     {
@@ -1544,7 +1544,7 @@
   {
    "cell_type": "code",
    "execution_count": 159,
-   "id": "ed5373dc",
+   "id": "c49e837d",
    "metadata": {},
    "outputs": [
     {
@@ -1590,7 +1590,7 @@
   {
    "cell_type": "code",
    "execution_count": 160,
-   "id": "7316a507",
+   "id": "f71af3da",
    "metadata": {},
    "outputs": [
     {
@@ -2062,7 +2062,7 @@
   {
    "cell_type": "code",
    "execution_count": 162,
-   "id": "6bddadfc",
+   "id": "ecacf9b1",
    "metadata": {},
    "outputs": [
     {
@@ -2278,7 +2278,7 @@
   {
    "cell_type": "code",
    "execution_count": 163,
-   "id": "fb0e764a",
+   "id": "44e1c324",
    "metadata": {},
    "outputs": [
     {
@@ -3111,7 +3111,7 @@
   {
    "cell_type": "code",
    "execution_count": 168,
-   "id": "fb2d7755",
+   "id": "3a6d1bd8",
    "metadata": {
     "scrolled": true
    },
@@ -3159,7 +3159,7 @@
   {
    "cell_type": "code",
    "execution_count": 169,
-   "id": "8cff3c76",
+   "id": "2be966f7",
    "metadata": {},
    "outputs": [
     {
@@ -3603,7 +3603,7 @@
   {
    "cell_type": "code",
    "execution_count": 173,
-   "id": "e5c55fad",
+   "id": "2672dcfb",
    "metadata": {},
    "outputs": [
     {
@@ -3635,7 +3635,7 @@
   {
    "cell_type": "code",
    "execution_count": 174,
-   "id": "d7c11238",
+   "id": "17f85d96",
    "metadata": {},
    "outputs": [
     {
@@ -3658,7 +3658,7 @@
   {
    "cell_type": "code",
    "execution_count": 175,
-   "id": "68b82099",
+   "id": "f2a9d873",
    "metadata": {},
    "outputs": [
     {
@@ -3690,7 +3690,7 @@
   {
    "cell_type": "code",
    "execution_count": 176,
-   "id": "1fb285e6",
+   "id": "95924196",
    "metadata": {},
    "outputs": [
     {
@@ -3736,7 +3736,7 @@
   {
    "cell_type": "code",
    "execution_count": 177,
-   "id": "24e10361",
+   "id": "e64b707e",
    "metadata": {},
    "outputs": [
     {
@@ -3782,7 +3782,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "850e3e29",
+   "id": "9ba90670",
    "metadata": {},
    "source": [
     "# Nettoyage des données terminé! 0 valeurs manquantes!"
@@ -3790,7 +3790,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2b67b3e9",
+   "id": "5787da6d",
    "metadata": {},
    "source": [
     "# Datetime column"
@@ -3799,7 +3799,7 @@
   {
    "cell_type": "code",
    "execution_count": 178,
-   "id": "76bc04c3",
+   "id": "a99a3528",
    "metadata": {},
    "outputs": [
     {
@@ -3822,7 +3822,7 @@
   {
    "cell_type": "code",
    "execution_count": 179,
-   "id": "445d0637",
+   "id": "dc7e444f",
    "metadata": {},
    "outputs": [
     {
@@ -3902,7 +3902,7 @@
   {
    "cell_type": "code",
    "execution_count": 182,
-   "id": "d1b8c632",
+   "id": "7102c312",
    "metadata": {},
    "outputs": [
     {
@@ -3934,7 +3934,7 @@
   {
    "cell_type": "code",
    "execution_count": 183,
-   "id": "8ee646b6",
+   "id": "ce1982b4",
    "metadata": {},
    "outputs": [
     {
@@ -3980,7 +3980,7 @@
   {
    "cell_type": "code",
    "execution_count": 184,
-   "id": "b3d85cdd",
+   "id": "a6fb3f5b",
    "metadata": {},
    "outputs": [
     {
@@ -4392,7 +4392,7 @@
   {
    "cell_type": "code",
    "execution_count": 188,
-   "id": "76f8a620",
+   "id": "116b67a8",
    "metadata": {},
    "outputs": [
     {
@@ -4413,12 +4413,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9a63c77c",
+   "cell_type": "markdown",
+   "id": "4380d036",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Fin du notebook\n",
+    "  "
+   ]
   }
  ],
  "metadata": {
